@@ -2,6 +2,7 @@ Version 3.0.6 December 4, 2006
 ==============================
 BUG: Ticket#442 - TPageService getBasePath in namespace form (Qiang)
 BUG: TTableCell should render &nbsp; only when Text is not set and there's no child (Qiang)
+CHG: Ticket#437 - __autoload is replaced by spl_autoload_register (Qiang)
 CHG: constructUrl() now encodes & into &amp; by default (Qiang)
 CHG: TRepeater does not render <span> anymore for empty item template (Qiang)
 
